--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>zstix maps</title>
   </head>
   <body>
-    <script src="http://localhost:8080/src/test.js"></script>
+    <script src="./src/test.js"></script>
   </body>
 </html>
