--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <title>zstix maps</title>
+    <style>
+      body {
+        background-color: #CCC;
+      }
+      svg {
+        border: 2px solid black;
+        background-color: #E0D3AF;
+      }
+    </style>
   </head>
   <body>
     <script src="./src/test.js"></script>
