Forest and texture

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       svg {
         border: 2px solid black;
         background-color: #E0D3AF;
+        background-image: url("https://www.transparenttextures.com/patterns/cardboard.png");
       }
     </style>
   </head>
